force-app/main/default/objects/Promoter_Attendance_Rule__c/Promoter_Attendance_Rule__c.object-meta.xml
<CustomObject>
    <label>Promoter Attendance Rule</label>
    <nameField>
        <label>Promoter Attendance Rule Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Promoter Attendance Rule</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>