force-app/main/default/objects/Promoter_Attendance_Rule__c/fields/Need_Check_Distance__c.field-meta.xml
<CustomField>
    <fullName>Need_Check_Distance__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Don&apos;t allow off-site check</label>
    <type>Checkbox</type>
</CustomField>