force-app/main/default/objects/Promoter_Attendance_Rule__c/fields/Promoter_Attendance_Rule_Number__c.field-meta.xml
<CustomField>
    <fullName>Promoter_Attendance_Rule_Number__c</fullName>
    <displayFormat>PAR-{00000}</displayFormat>
    <label>Promoter Attendance Rule Number</label>
    <type>AutoNumber</type>
</CustomField>