force-app/main/default/objects/Promoter_Attendance_Rule__c/fields/Start_time__c.field-meta.xml
<CustomField>
    <fullName>Start_time__c</fullName>
    <label>Start time</label>
    <required>true</required>
    <type>Time</type>
</CustomField>