force-app/main/default/objects/Promoter_Attendance_Rule__c/fields/Time_buffer__c.field-meta.xml
<CustomField>
    <fullName>Time_buffer__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Check-in Time buffer (min)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>