force-app/main/default/objects/Promoter_Attendance_Rule__c/validationRules/Distance_Cannot_Be_Empty.validationRule-meta.xml
<ValidationRule>
    <fullName>Distance_Cannot_Be_Empty</fullName>
    <active>true</active>
    <errorConditionFormula>IF(AND(Need_Check_Distance__c,OR(Distance__c&lt;=0,ISBLANK(Distance__c),ISNULL(Distance__c))),true,false)</errorConditionFormula>
    <errorDisplayField>Distance__c</errorDisplayField>
    <errorMessage>Distance cannot be empty.</errorMessage>
</ValidationRule>