force-app/main/default/objects/Promoter_Attendance_Rule__c/validationRules/End_Time_Greater_Than_Start_Time.validationRule-meta.xml
<ValidationRule>
    <fullName>End_Time_Greater_Than_Start_Time</fullName>
    <active>true</active>
    <errorConditionFormula>IF( Start_time__c &gt;=  End_time__c ,true,false)</errorConditionFormula>
    <errorMessage>End time cannot be less than Start time.</errorMessage>
</ValidationRule>