force-app/main/default/objects/Promoter_Attendance_Rule__c/validationRules/Time_buffer_cannot_be_greater_than_60.validationRule-meta.xml
<ValidationRule>
    <fullName>Time_buffer_cannot_be_greater_than_60</fullName>
    <active>true</active>
    <errorConditionFormula>IF(Time_buffer__c&gt;60,true,false)</errorConditionFormula>
    <errorDisplayField>Time_buffer__c</errorDisplayField>
    <errorMessage>Time buffer cannot be greater than 60.</errorMessage>
</ValidationRule>