force-app/main/default/objects/Promoter_Attendance_Rule__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>OBJECT_ID</columns>
    <columns>NAME</columns>
    <columns>Start_time__c</columns>
    <columns>End_time__c</columns>
    <columns>Distance__c</columns>
    <columns>CURRENCY_ISO_CODE</columns>
    <columns>CREATED_DATE</columns>
    <columns>CREATEDBY_USER</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>