force-app/main/default/objects/Promoter_Attendance_Rule__c/listViews/Mexico.listView-meta.xml
<ListView>
    <fullName>Mexico</fullName>
    <columns>NAME</columns>
    <columns>Start_time__c</columns>
    <columns>End_time__c</columns>
    <columns>Distance__c</columns>
    <columns>Time_buffer__c</columns>
    <columns>Need_Check_Distance__c</columns>
    <columns>CURRENCY_ISO_CODE</columns>
    <columns>CREATED_DATE</columns>
    <columns>CREATEDBY_USER</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CURRENCY_ISO_CODE</field>
        <operation>equals</operation>
        <value>MXN</value>
    </filters>
    <label>Mexico</label>
    <sharedTo>
        <roleAndSubordinatesInternal>Mexico_HPMMD</roleAndSubordinatesInternal>
    </sharedTo>
</ListView>